[package]
name = "savgol-rs"
description = "Savitzky-Golay filter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tpict/savgol-rs/"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "mathematics", "science"]

[dependencies]
lstsq = "0.5.0"
nalgebra = "0.32.3"
polyfit-rs = "0.2.1"

[dev-dependencies]
serde_json = "1.0"
subprocess = "0.2.9"
approx = "0.5.1"
itertools = "0.11.0"
